[package]
name = "skip-list"
version = "0.1.3"
edition = "2021"
authors = ["Genie <inathan@163.com>"]
keywords = ['skiplist']
description = 'Implementing a skip list with rust'
documentation = 'https://docs.rs/skip-list'
homepage = 'https://github.com/ge-nie/skip-list'
repository = 'https://github.com/ge-nie/skip-list'

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
